--- a/package.json
+++ b/package.json
@@ -16,4 +16,25 @@
     "hbs": "^4.2.0",
     "mongoose": "^8.7.2"
   }
+  "name": "hume-evi-typescript-sample-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "hume": "^0.8.6"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4"
+  },
+  "engines": {
+    "node": ">=18"
+  }
 }
+
+
