--- a/package.json
+++ b/package.json
@@ -1,31 +1,45 @@
 {
-  "name": "deeper-connections",
-  "version": "1.0.0",
-  "description": "*An interactive therapy tool*",
-  "main": "script.js",
+  "name": "hume-evi-next-js-starter",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://github.com/humeai/hume-evi-next-js-starter",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "express": "^4.21.1",
-    "hbs": "^4.2.0",
-    "mongoose": "^8.7.2",
-    "hume": "^0.8.6"
+    "@humeai/voice-react": "^0.1.15",
+    "hume": "^0.8.10",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@types/react-virtualized": "^9.21.30",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.10",
+    "geist": "^1.3.0",
+    "hume": "^0.8.10",
+    "lucide-react": "^0.394.0",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-virtualized": "^9.22.5",
+    "remeda": "^2.0.9",
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "ts-pattern": "^5.1.2"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.1.4"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "private": true
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  }
 }
